--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ html{
     margin: auto;
 }
 
-
+/*------------home page styling----------------------------------------------*/
 /*pre loading animations*/
 .loader {
     position: fixed;
@@ -45,7 +45,7 @@ html{
     }
 }
 
-
+/*----------------------------------------------------------*/
 /*carousal and sections*/
 .button1{
     margin:0px 400px;
@@ -137,7 +137,7 @@ html{
     font-family:  serif;
     font-size: 40px;
 }
-.body{
+body{
     background-color: #FFF5AB;
 }
 
@@ -145,7 +145,6 @@ html{
     color:black;
     font-size:30px;
     font-family:  serif;
-    font-weight: 900;
-    
-    
+    font-weight: 900;   
 }
+/*----------------------------------------------------------*/
