--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,7 @@ html{
     margin:0px 400px;
     font-size: 27px;
     padding: 10px;
+    border-radius: 15px;
     background-color: black;
     color: white;
     font-family: 'Times New Roman', Times, serif;
