--- a/html/investment1.css
+++ b/html/investment1.css
@@ -2,7 +2,7 @@
 
 *{
   margin: 0;
-  padding: 0;
+  padding: 0px;
   box-sizing: border-box;
   list-style: none;
   text-decoration: none;
@@ -87,6 +87,6 @@ body{
   margin-bottom: 50px;
 }
 
-
-
+.main_content{
+  padding:20px;
 }
