--- a/html/styles.css
+++ b/html/styles.css
@@ -151,3 +151,4 @@ body{
 }
 /*----------------------------------------------------------*/
 
+/* --------------Invest page styling----------------------- */
