--- a/finlit/html/investment1.css
+++ b/finlit/html/investment1.css
@@ -1,12 +1,11 @@
-/* @import url('https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap');
 
 *{
-  margin: 10px;
-  padding: 10px;
+  margin:0;
+  padding: 0;
   box-sizing: border-box;
   list-style: none;
   text-decoration: none;
-  text-align: justify;
   font-family: 'Josefin Sans', sans-serif;
 }
 
@@ -14,8 +13,15 @@ body{
    background-color: #f3f5f9;
    color: rgb(26, 161, 13);
    text-align: justify;
-   
+   word-spacing: 2px;
 }
+
+.vid{
+  margin: 10px;
+  display: flex;
+  justify-content: center;
+}
+
 
 .wrapper{
   text-align: justify;
@@ -71,6 +77,7 @@ body{
 }
 
 .wrapper .main_content .header{
+  margin-top: 20px;
   padding: 20px;
   background: rgb(250, 246, 246);
   color: #4083e9;
@@ -94,6 +101,5 @@ body{
 
 .main_content{
   padding:20px;
-  
-  
-} */
+} 
+
