--- a/finlit/html/styles.css
+++ b/finlit/html/styles.css
@@ -48,18 +48,17 @@ html{
 /*----------------------------------------------------------*/
 /*carousal and sections*/
 .button1{
-    margin:0px 400px;
+    margin-top: 20px;
+    width: max-content;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
     font-size: 27px;
     padding: 10px;
     border-radius: 15px;
-    background-color: black;
-    color: white;
+    background-color: rgba(235, 18, 18, 0.8);
+    color: rgb(250, 252, 250);
     font-family: 'Times New Roman', Times, serif;
-}
-@media only screen and (max-width : 620px) {
-    .button1{
-        margin:0px 0px;
-    }
 }
 
 .button1:hover{
@@ -72,7 +71,7 @@ html{
     color: white;
     font-size: 20px;;
     padding: 5px;
-    width: 200px;
+    /* width: 200px; */
     border-radius: 8px;
 }
 .button1:hover, .button:hover{
@@ -104,11 +103,9 @@ html{
     color: black;
     padding: 8px 15px;
 }
-.container2{
-    margin:5px 100px;
-    background-color:#E5FBB8;
-    color: black;
-    padding: 8px 15px;
+#contact{
+    padding: 2px;
+    text-align: center;
 }
 
 
@@ -122,12 +119,13 @@ html{
 
 .display-4 {
     font-family:  serif;
-    color: black;
+    color: wheat;
 }
 
 .lead {
     font-family:  serif;
     font-size: 22px;
+    margin: 10px;
 }
 
 .navbar.scrolled {
@@ -138,6 +136,7 @@ html{
 .lead1{
     font-family:  serif;
     font-size: 40px;
+    color:rgb(133, 119, 119);
 }
 body{
     background-color: #FFF5AB;
